# approx-derive

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: abs_diff_eq.rs  args_parsing.rs  base_types.rs  lib.rs  rel_diff_eq.rs
tests/: derive_abs_diff.rs  derive_rel_diff.rs
