[package]
name = "approx-derive"
version = "0.2.2"
edition = "2021"
description = "Extends the approx crate by derive macros."
license = "Apache-2.0"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.76", features = ["default", "full"] }

[dev-dependencies]
approx = "0.5.1"
approxim = "0.6"

[features]
approxim = []
