[package]
name = "approx-derive"
version = "0.2.8"
edition = "2021"
description = "Extends the approx crate by derive macros."
license = "Apache-2.0"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-crate = "3.3.0"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.76", features = ["default", "full"] }

[dev-dependencies]
approx = { git = "https://github.com/brendanzab/approx", branch = "approxim-merge", default_features = false, features = ["tuple_impl", "array_impl"] }
approxim = { version = "0.6", features = ["tuple_impl"], default-features=false }

[features]
default = []
infer_name = []
